--- a/TestNGProjects/test-output/old/Default suite/classes.html
+++ b/TestNGProjects/test-output/old/Default suite/classes.html
@@ -4,38 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testScript3.AllWebElements</td>
+<td>testScript3.Assertion</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>dropDown</td>
+<td>assertNullTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>radioButton</td>
+<td>assertEqualsTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>buttonDoubleClick</td>
+<td>assertNotNull</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>link</td>
+<td>assertNotEqualTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>checkBox</td>
+<td>assertTrueTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>confirmButton</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>dragAndDrop</td>
+<td>assertFalseTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
