--- a/TestNGProjects/test-output/old/Default suite/classes.html
+++ b/TestNGProjects/test-output/old/Default suite/classes.html
@@ -4,34 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testScript3.Assertion</td>
+<td>testScript3.MultipleWindowHandling</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>assertNullTest</td>
+<td>multipleWindowHandleTest2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>assertEqualsTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>assertNotNull</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>assertNotEqualTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>assertTrueTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>assertFalseTest</td>
+<td>multipleWindowHandle</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
