--- a/TestNGProjects/test-output/old/Default suite/methods-not-run.html
+++ b/TestNGProjects/test-output/old/Default suite/methods-not-run.html
@@ -1,7 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>testScript3.Assertion.assertNotEqualTest</td></tr>
-<tr><td>testScript3.Assertion.assertTrueTest</td></tr>
-<tr><td>testScript3.Assertion.assertFalseTest</td></tr>
-<tr><td>testScript3.Assertion.assertNullTest</td></tr>
-<tr><td>testScript3.Assertion.assertEqualsTest</td></tr>
+<tr><td>testScript3.MultipleWindowHandling.multipleWindowHandle</td></tr>
 </table>
