--- a/TestNGProjects/test-output/index.html
+++ b/TestNGProjects/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\karthi\AppData\Local\Temp\testng-eclipse-986996560\testng-customsuite.xml</span>
+                    <span>C:\Users\karthi\AppData\Local\Temp\testng-eclipse--2147400354\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testScript3.Assertion" class="method navigator-link" hash-for-method="assertNotNull">assertNotNull</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testScript3.MultipleWindowHandling" class="method navigator-link" hash-for-method="multipleWindowHandleTest2">multipleWindowHandleTest2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testScript3.Assertion</span>
+              <span class="class-name">testScript3.MultipleWindowHandling</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="assertNotNull">
-                  </a> <!-- assertNotNull -->
-                  <span class="method-name">assertNotNull</span>
+                  <a name="multipleWindowHandleTest2">
+                  </a> <!-- multipleWindowHandleTest2 -->
+                  <span class="method-name">multipleWindowHandleTest2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\karthi\AppData\Local\Temp\testng-eclipse-986996560\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\karthi\AppData\Local\Temp\testng-eclipse--2147400354\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testScript3.Assertion&quot;&gt;
+      &lt;class name=&quot;testScript3.MultipleWindowHandling&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;assertNotNull&quot;/&gt;
+          &lt;include name=&quot;multipleWindowHandleTest2&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- testScript3.Assertion --&gt;
+      &lt;/class&gt; &lt;!-- testScript3.MultipleWindowHandling --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'assertNotNull')
-data.setCell(0, 2, 'testScript3.Assertion')
-data.setCell(0, 3, 1779);
+data.setCell(0, 1, 'multipleWindowHandleTest2')
+data.setCell(0, 2, 'testScript3.MultipleWindowHandling')
+data.setCell(0, 3, 2606);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,21 +214,13 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">5 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">testScript3.Assertion</span>
+              <span class="ignored-class-name">testScript3.MultipleWindowHandling</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">assertNotEqualTest</span>
-                <br/>
-                <span class="ignored-method-name">assertTrueTest</span>
-                <br/>
-                <span class="ignored-method-name">assertFalseTest</span>
-                <br/>
-                <span class="ignored-method-name">assertNullTest</span>
-                <br/>
-                <span class="ignored-method-name">assertEqualsTest</span>
+                <span class="ignored-method-name">multipleWindowHandle</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -240,14 +232,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testScript3.Assertion</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testScript3.MultipleWindowHandling</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initializeBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">assertNotNull</span>
-                <span class="method-start">6545 ms</span>
+                <span class="method-name">multipleWindowHandleTest2</span>
+                <span class="method-start">5607 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
