--- a/TestNGProjects/test-output/old/Default suite/methods.html
+++ b/TestNGProjects/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d68fcd">  <td>24/06/18 11:18:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser()[pri:0, instance:testScript3.Assertion@6da21078]">&gt;&gt;initializeBrowser</td> 
-<td>&nbsp;</td>  <td>main@485937598</td>   <td></td> </tr>
-<tr bgcolor="67b0b6">  <td>24/06/18 11:18:56</td>   <td>6540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assertion.assertNotNull()[pri:0, instance:testScript3.Assertion@6da21078]">assertNotNull</td> 
-  <td>main@485937598</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>24/06/20 12:41:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.initializeBrowser()[pri:0, instance:testScript3.MultipleWindowHandling@73e22a3d]">&gt;&gt;initializeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1976804832</td>   <td></td> </tr>
+<tr bgcolor="67b0b6">  <td>24/06/20 12:41:25</td>   <td>5606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultipleWindowHandling.multipleWindowHandleTest2()[pri:0, instance:testScript3.MultipleWindowHandling@73e22a3d]">multipleWindowHandleTest2</td> 
+  <td>main@1976804832</td>   <td></td> </tr>
 </table>
