push and commit

--- a/TestNGProjects/test-output/old/Default suite/classes.html
+++ b/TestNGProjects/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testScript3.MultipleWindowHandling</td>
+<td>Practice.DragandDrop</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>multipleWindowHandleTest2</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>multipleWindowHandle</td>
+<td>dragAndDrop</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
