--- a/TestNGProjects/test-output/index.html
+++ b/TestNGProjects/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\karthi\AppData\Local\Temp\testng-eclipse--2147400354\testng-customsuite.xml</span>
+                    <span>C:\Users\karthi\AppData\Local\Temp\testng-eclipse-335402358\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testScript3.MultipleWindowHandling" class="method navigator-link" hash-for-method="multipleWindowHandleTest2">multipleWindowHandleTest2</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Practice.DragandDrop" class="method navigator-link" hash-for-method="dragAndDrop">dragAndDrop</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testScript3.MultipleWindowHandling</span>
+              <span class="class-name">Practice.DragandDrop</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="multipleWindowHandleTest2">
-                  </a> <!-- multipleWindowHandleTest2 -->
-                  <span class="method-name">multipleWindowHandleTest2</span>
+                  <a name="dragAndDrop">
+                  </a> <!-- dragAndDrop -->
+                  <span class="method-name">dragAndDrop</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\karthi\AppData\Local\Temp\testng-eclipse--2147400354\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\karthi\AppData\Local\Temp\testng-eclipse-335402358\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testScript3.MultipleWindowHandling&quot;&gt;
+      &lt;class name=&quot;Practice.DragandDrop&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;multipleWindowHandleTest2&quot;/&gt;
+          &lt;include name=&quot;dragAndDrop&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- testScript3.MultipleWindowHandling --&gt;
+      &lt;/class&gt; &lt;!-- Practice.DragandDrop --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,9 +192,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'multipleWindowHandleTest2')
-data.setCell(0, 2, 'testScript3.MultipleWindowHandling')
-data.setCell(0, 3, 2606);
+data.setCell(0, 1, 'dragAndDrop')
+data.setCell(0, 2, 'Practice.DragandDrop')
+data.setCell(0, 3, 2783);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -214,16 +214,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">testScript3.MultipleWindowHandling</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">multipleWindowHandle</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -232,14 +225,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testScript3.MultipleWindowHandling</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Practice.DragandDrop</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initializeBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">multipleWindowHandleTest2</span>
-                <span class="method-start">5607 ms</span>
+                <span class="method-name">dragAndDrop</span>
+                <span class="method-start">6447 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
